Added info.url as link to forum thread.

--- a/addons/source-python/plugins/gungame/plugins/custom/gg_no_cash/info.ini
+++ b/addons/source-python/plugins/gungame/plugins/custom/gg_no_cash/info.ini
@@ -2,5 +2,5 @@ verbose_name = "GG No Cash"
 author = "satoon101"
 description = "Cash is always set to 0."
 version = "1.0.0"
-url = ""
+url = "https://forums.sourcepython.com/viewtopic.php?t=1626"
 conflicts = "gg_buy_level",
